# luciel-platform

./: .env.example  .gitignore  AGENTS.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
apps/tours/api/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini
apps/tours/api/app/: audit.py  config.py  database.py  dependencies.py  main.py  schema_sync.py  seed.py
apps/tours/api/app/models/: __init__.py  core.py  tours.py
apps/tours/api/app/routers/: __init__.py  agencia_pagos.py  agencia_precios.py  auth.py  core.py  solicitudes.py  tipos_tour.py  tours.py  usuarios.py
apps/tours/api/app/schemas/: __init__.py  core.py  tours.py
apps/tours/api/app/services/: __init__.py  accounting.py  commission.py  liquidaciones.py  venta_resolver.py
apps/tours/api/migrations/: env.py
apps/tours/api/migrations/versions/: 001_initial_schema.py  002_usuarios_username_unique.py  003_solicitudes.py  004_tipos_tour.py  005_agencia_precio_pagos.py  006_vendedores_usuario_link.py  007_agencia_precio_moneda_unica.py
apps/tours/api/tests/: conftest.py  test_agencia_pagos.py  test_agencia_precios.py  test_asientos_admin.py  test_audit_log.py  test_auth.py  test_catalogos.py  test_comisiones.py  test_dashboard.py  test_estado_calculado.py  test_liquidaciones.py  test_partida_doble.py  test_rbac.py  test_schema_isolation.py  test_schema_sync.py  test_solicitudes.py  test_tipos_tour.py  test_usuarios.py  test_venta_resolver.py  test_ventas.py  test_ventas_d33.py
scripts/: verify-prod.sh  (+2 more)
(+163 files in other folders)
