[project]
name = "tours-api"
version = "0.1.0"
description = "FastAPI backend for Tours mini-ERP (panel contable hotel/agencia) — Phase 02.1 of luciel-platform."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.136.1",
  "uvicorn>=0.34.0",
  "sqlalchemy>=2.0.40",
  "aiosqlite>=0.21.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.5.0",
  "bcrypt>=4.3.0",
  "pyjwt>=2.10.0",
  "alembic>=1.15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"